--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 <body>
 
   <div id="content" class="content">
-    <div class="card__profile">
 
+    <div class="card__profile">
       <div class="card__profile_details">
         <img src="images/image-jeremy.png" alt="">
         <p class="text_profile">Report for</p>
@@ -29,132 +29,131 @@
         <button id="btn_weekly" onclick="hoursCategory()">Weekly</button>
         <button id="btn_monthly" onclick="hoursCategory()">Monthly</button>
       </div>
-
     </div>
-    <div class="cards_activity">
 
-      <div class="card_work">
-        <div class="card__work_img">
-          <img src="images/icon-work.svg" alt="">
-        </div>
-        <div class="card__work_timeframe">
-          <div class="header">
-            <h3>Work</h3>
-            <div class="header__menu">
-              <svg width="21" height="5" xmlns="http://www.w3.org/2000/svg">
-                <path
-                  d="M2.5 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z"
-                  fill="#BBC0FF" fill-rule="evenodd" />
-              </svg>
-            </div>
-          </div>
-          <h1 class="current">32hrs</h1>
-          <p class="previous">Last week - 36hrs</p>
-        </div>
+
+    <div class="card_work">
+      <div class="card__work_img">
+        <img src="images/icon-work.svg" alt="">
       </div>
-
-      <div class="card_play">
-        <div class="card__play_img">
-          <img src="images/icon-play.svg" alt="">
-        </div>
-        <div class="card__play_timeframe">
-          <div class="header">
-            <h3>Play</h3>
-            <div class="header__menu">
-              <svg width="21" height="5" xmlns="http://www.w3.org/2000/svg">
-                <path
-                  d="M2.5 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z"
-                  fill="#BBC0FF" fill-rule="evenodd" />
-              </svg>
-            </div>
+      <div class="card__work_timeframe">
+        <div class="header">
+          <h3>Work</h3>
+          <div class="header__menu">
+            <svg width="21" height="5" xmlns="http://www.w3.org/2000/svg">
+              <path
+                d="M2.5 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z"
+                fill="#BBC0FF" fill-rule="evenodd" />
+            </svg>
           </div>
-          <h1 class="current">32hrs</h1>
-          <p class="previous">Last week - 36hrs</p>
         </div>
+        <h1 class="current">32hrs</h1>
+        <p class="previous">Last week - 36hrs</p>
       </div>
-
-      <div class="card_study">
-        <div class="card__study_img">
-          <img src="images/icon-study.svg" alt="">
-        </div>
-        <div class="card__study_timeframe">
-          <div class="header">
-            <h3>Study</h3>
-            <div class="header__menu">
-              <svg width="21" height="5" xmlns="http://www.w3.org/2000/svg">
-                <path
-                  d="M2.5 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z"
-                  fill="#BBC0FF" fill-rule="evenodd" />
-              </svg>
-            </div>
-          </div>
-          <h1 class="current">32hrs</h1>
-          <p class="previous">Last week - 36hrs</p>
-        </div>
-      </div>
-
-      <div class="card_exercise">
-        <div class="card__exercise_img">
-          <img src="images/icon-exercise.svg" alt="">
-        </div>
-        <div class="card__exercise_timeframe">
-          <div class="header">
-            <h3>Exercise</h3>
-            <div class="header__menu">
-              <svg width="21" height="5" xmlns="http://www.w3.org/2000/svg">
-                <path
-                  d="M2.5 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z"
-                  fill="#BBC0FF" fill-rule="evenodd" />
-              </svg>
-            </div>
-          </div>
-          <h1 class="current">32hrs</h1>
-          <p class="previous">Last week - 36hrs</p>
-        </div>
-      </div>
-
-      <div class="card_social">
-        <div class="card__social_img">
-          <img src="images/icon-social.svg" alt="">
-        </div>
-        <div class="card__social_timeframe">
-          <div class="header">
-            <h3>Social</h3>
-            <div class="header__menu">
-              <svg width="21" height="5" xmlns="http://www.w3.org/2000/svg">
-                <path
-                  d="M2.5 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z"
-                  fill="#BBC0FF" fill-rule="evenodd" />
-              </svg>
-            </div>
-          </div>
-          <h1 class="current">32hrs</h1>
-          <p class="previous">Last week - 36hrs</p>
-        </div>
-      </div>
-
-      <div class="card_selfcare">
-        <div class="card__selfcare_img">
-          <img src="images/icon-selfcare.svg" alt="">
-        </div>
-        <div class="card__selfcare_timeframe">
-          <div class="header">
-            <h3>Self Care</h3>
-            <div class="header__menu">
-              <svg width="21" height="5" xmlns="http://www.w3.org/2000/svg">
-                <path
-                  d="M2.5 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z"
-                  fill="#BBC0FF" fill-rule="evenodd" />
-              </svg>
-            </div>
-          </div>
-          <h1 class="current">32hrs</h1>
-          <p class="previous">Last week - 36hrs</p>
-        </div>
-      </div>
-
-
     </div>
+
+    <div class="card_play">
+      <div class="card__play_img">
+        <img src="images/icon-play.svg" alt="">
+      </div>
+      <div class="card__play_timeframe">
+        <div class="header">
+          <h3>Play</h3>
+          <div class="header__menu">
+            <svg width="21" height="5" xmlns="http://www.w3.org/2000/svg">
+              <path
+                d="M2.5 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z"
+                fill="#BBC0FF" fill-rule="evenodd" />
+            </svg>
+          </div>
+        </div>
+        <h1 class="current">32hrs</h1>
+        <p class="previous">Last week - 36hrs</p>
+      </div>
+    </div>
+
+    <div class="card_study">
+      <div class="card__study_img">
+        <img src="images/icon-study.svg" alt="">
+      </div>
+      <div class="card__study_timeframe">
+        <div class="header">
+          <h3>Study</h3>
+          <div class="header__menu">
+            <svg width="21" height="5" xmlns="http://www.w3.org/2000/svg">
+              <path
+                d="M2.5 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z"
+                fill="#BBC0FF" fill-rule="evenodd" />
+            </svg>
+          </div>
+        </div>
+        <h1 class="current">32hrs</h1>
+        <p class="previous">Last week - 36hrs</p>
+      </div>
+    </div>
+
+    <div class="card_exercise">
+      <div class="card__exercise_img">
+        <img src="images/icon-exercise.svg" alt="">
+      </div>
+      <div class="card__exercise_timeframe">
+        <div class="header">
+          <h3>Exercise</h3>
+          <div class="header__menu">
+            <svg width="21" height="5" xmlns="http://www.w3.org/2000/svg">
+              <path
+                d="M2.5 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z"
+                fill="#BBC0FF" fill-rule="evenodd" />
+            </svg>
+          </div>
+        </div>
+        <h1 class="current">32hrs</h1>
+        <p class="previous">Last week - 36hrs</p>
+      </div>
+    </div>
+
+    <div class="card_social">
+      <div class="card__social_img">
+        <img src="images/icon-social.svg" alt="">
+      </div>
+      <div class="card__social_timeframe">
+        <div class="header">
+          <h3>Social</h3>
+          <div class="header__menu">
+            <svg width="21" height="5" xmlns="http://www.w3.org/2000/svg">
+              <path
+                d="M2.5 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z"
+                fill="#BBC0FF" fill-rule="evenodd" />
+            </svg>
+          </div>
+        </div>
+        <h1 class="current">32hrs</h1>
+        <p class="previous">Last week - 36hrs</p>
+      </div>
+    </div>
+
+    <div class="card_selfcare">
+      <div class="card__selfcare_img">
+        <img src="images/icon-self-care.svg" alt="">
+      </div>
+      <div class="card__selfcare_timeframe">
+        <div class="header">
+          <h3>Self Care</h3>
+          <div class="header__menu">
+            <svg width="21" height="5" xmlns="http://www.w3.org/2000/svg">
+              <path
+                d="M2.5 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z"
+                fill="#BBC0FF" fill-rule="evenodd" />
+            </svg>
+          </div>
+        </div>
+        <h1 class="current">32hrs</h1>
+        <p class="previous">Last week - 36hrs</p>
+      </div>
+    </div>
+
+
+
 
 
 
