--- a/index.html
+++ b/index.html
@@ -16,27 +16,30 @@
 
 <body>
 
-  <div id="content" class="content">
+  <section id="content" class="content">
 
     <div class="card__profile">
       <div class="card__profile_details">
-        <img src="images/image-jeremy.png" alt="">
-        <p class="text_profile">Report for</p>
-        <h2 class="name_profile">Jeremy Robson</h2>
+        <img src="images/image-jeremy.png" alt="" class="card__profile_details_img">
+        <div class="card__profile_details_text">
+          <p class="text_profile">Report for</p>
+          <h2 class="name_profile">Jeremy Robson</h2>
+        </div>
       </div>
       <div class="card__profile_buttons">
-        <button id="btn_daily">Daily</button>
-        <button id="btn_weekly" onclick="hoursCategory()">Weekly</button>
-        <button id="btn_monthly" onclick="hoursCategory()">Monthly</button>
+        <button id="btn_daily" data-option="daily">Daily</button>
+        <button id="btn_weekly" data-option="weekly">Weekly</button>
+        <button id="btn_monthly" data-option="monthly">Monthly</button>
       </div>
     </div>
 
 
-    <div class="card_work">
-      <div class="card__work_img">
+
+    <div class="card work">
+      <div class="card__img">
         <img src="images/icon-work.svg" alt="">
       </div>
-      <div class="card__work_timeframe">
+      <div class="card__timeframe">
         <div class="header">
           <h3>Work</h3>
           <div class="header__menu">
@@ -47,16 +50,18 @@
             </svg>
           </div>
         </div>
-        <h1 class="current">32hrs</h1>
-        <p class="previous">Last week - 36hrs</p>
+        <div class="timeframes">
+          <h1 class="current">32hrs</h1>
+          <p class="previous">Last week - 36hrs</p>
+        </div>
       </div>
     </div>
 
-    <div class="card_play">
-      <div class="card__play_img">
+    <div class="card play">
+      <div class="card__img">
         <img src="images/icon-play.svg" alt="">
       </div>
-      <div class="card__play_timeframe">
+      <div class="card__timeframe">
         <div class="header">
           <h3>Play</h3>
           <div class="header__menu">
@@ -67,16 +72,18 @@
             </svg>
           </div>
         </div>
-        <h1 class="current">32hrs</h1>
-        <p class="previous">Last week - 36hrs</p>
+        <div class="timeframes">
+          <h1 class="current">32hrs</h1>
+          <p class="previous">Last week - 36hrs</p>
+        </div>
       </div>
     </div>
 
-    <div class="card_study">
-      <div class="card__study_img">
+    <div class="card study">
+      <div class="card__img">
         <img src="images/icon-study.svg" alt="">
       </div>
-      <div class="card__study_timeframe">
+      <div class="card__timeframe">
         <div class="header">
           <h3>Study</h3>
           <div class="header__menu">
@@ -87,16 +94,18 @@
             </svg>
           </div>
         </div>
-        <h1 class="current">32hrs</h1>
-        <p class="previous">Last week - 36hrs</p>
+        <div class="timeframes">
+          <h1 class="current">32hrs</h1>
+          <p class="previous">Last week - 36hrs</p>
+        </div>
       </div>
     </div>
 
-    <div class="card_exercise">
-      <div class="card__exercise_img">
-        <img src="images/icon-exercise.svg" alt="">
+    <div class="card exercise">
+      <div class="card__img">
+        <img id="imgexercise" src="images/icon-exercise.svg" alt="">
       </div>
-      <div class="card__exercise_timeframe">
+      <div class="card__timeframe">
         <div class="header">
           <h3>Exercise</h3>
           <div class="header__menu">
@@ -107,16 +116,18 @@
             </svg>
           </div>
         </div>
-        <h1 class="current">32hrs</h1>
-        <p class="previous">Last week - 36hrs</p>
+        <div class="timeframes">
+          <h1 class="current">32hrs</h1>
+          <p class="previous">Last week - 36hrs</p>
+        </div>
       </div>
     </div>
 
-    <div class="card_social">
-      <div class="card__social_img">
+    <div class="card social">
+      <div class="card__img">
         <img src="images/icon-social.svg" alt="">
       </div>
-      <div class="card__social_timeframe">
+      <div class="card__timeframe">
         <div class="header">
           <h3>Social</h3>
           <div class="header__menu">
@@ -132,11 +143,11 @@
       </div>
     </div>
 
-    <div class="card_selfcare">
-      <div class="card__selfcare_img">
+    <div class="card selfcare">
+      <div class="card__img">
         <img src="images/icon-self-care.svg" alt="">
       </div>
-      <div class="card__selfcare_timeframe">
+      <div class="card__timeframe">
         <div class="header">
           <h3>Self Care</h3>
           <div class="header__menu">
@@ -147,17 +158,14 @@
             </svg>
           </div>
         </div>
-        <h1 class="current">32hrs</h1>
-        <p class="previous">Last week - 36hrs</p>
+        <div class="timeframes">
+          <h1 class="current">32hrs</h1>
+          <p class="previous">Last week - 36hrs</p>
+        </div>
       </div>
     </div>
 
-
-
-
-
-
-  </div>
+  </section>
 
 
 
