--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </div>
 
 
-
+    <!-- 
     <div class="card work">
       <div class="card__img">
         <img src="images/icon-work.svg" alt="">
@@ -52,12 +52,16 @@
         </div>
         <div class="timeframes">
           <h1 class="current">32hrs</h1>
-          <p class="previous">Last week - 36hrs</p>
+          <div class="previous">
+            <p class="time-window">Last week</p>
+            <p>-</p>
+            <p class="time">36hrs</p>
+          </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
-    <div class="card play">
+    <!--  <div class="card play">
       <div class="card__img">
         <img src="images/icon-play.svg" alt="">
       </div>
@@ -74,7 +78,11 @@
         </div>
         <div class="timeframes">
           <h1 class="current">32hrs</h1>
-          <p class="previous">Last week - 36hrs</p>
+          <div class="previous">
+            <p class="time-window">Last week</p>
+            <p>-</p>
+            <p class="time">36hrs</p>
+          </div>
         </div>
       </div>
     </div>
@@ -96,7 +104,11 @@
         </div>
         <div class="timeframes">
           <h1 class="current">32hrs</h1>
-          <p class="previous">Last week - 36hrs</p>
+          <div class="previous">
+            <p class="time-window">Last week</p>
+            <p>-</p>
+            <p class="time">36hrs</p>
+          </div>
         </div>
       </div>
     </div>
@@ -118,7 +130,11 @@
         </div>
         <div class="timeframes">
           <h1 class="current">32hrs</h1>
-          <p class="previous">Last week - 36hrs</p>
+          <div class="previous">
+            <p class="time-window">Last week</p>
+            <p>-</p>
+            <p class="time">36hrs</p>
+          </div>
         </div>
       </div>
     </div>
@@ -139,7 +155,11 @@
           </div>
         </div>
         <h1 class="current">32hrs</h1>
-        <p class="previous">Last week - 36hrs</p>
+        <div class="previous">
+          <p class="time-window">Last week</p>
+          <p>-</p>
+          <p class="time">36hrs</p>
+        </div>
       </div>
     </div>
 
@@ -160,10 +180,14 @@
         </div>
         <div class="timeframes">
           <h1 class="current">32hrs</h1>
-          <p class="previous">Last week - 36hrs</p>
+          <div class="previous">
+            <p class="time-window">Last week</p>
+            <p>-</p>
+            <p class="time">36hrs</p>
+          </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
   </section>
 
